objects/Package__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <description>Display the status of the Email.</description>
    <inlineHelpText>Select the status of the package.</inlineHelpText>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>