objects/Package__c/fields/Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Amount__c</fullName>
    <description>The insurance amount</description>
    <inlineHelpText>Enter the insurance amount.</inlineHelpText>
    <label>Insurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>