objects/Package__c/fields/Recipient_Location__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recipient</description>
    <inlineHelpText>Recipient</inlineHelpText>
    <label>Recipient Location</label>
    <referenceTo>Recipient_Location__c</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>